Improved the website look and fixed alignment issues

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -51,7 +51,7 @@
    width: 40vw;
    position: absolute;
    top: 100%;
-   left: 50%;
+   left: 48.75%;
    transform: translate(-50%, -4%);
    z-index: 1;
    display: flex;
@@ -67,13 +67,20 @@
    padding-bottom: 2px;
 }
 
+.Top-menu-btn {
+   width: 185px;
+}
+
 .Results-container {
-   margin: 0 auto 0;
+   height: 87.5vh;
    width: fit-content;
+   margin: 0 auto 0;
+   display: flex;
+   flex-direction: column;
 }
 
 .Results-header {
-   padding: 1.25vh 0;
+   margin: 10px 0;
    display: flex;
    align-items: center;
 }
@@ -113,16 +120,19 @@
 
 .Item-desc {
    display: flex;
+   flex-direction: column;
 }
 
 .Item-name {
    padding-left: 6px;
-   width: 80%;  
+   padding-right: 6px;
    text-align: left;
 }
 
 .Item-price {
-   width: 20%;
+   text-align: start;
+   font-weight: 600;
+   padding-left: 6px;
 }
 
 .Item-link {
@@ -140,21 +150,20 @@
    justify-content: center;
    align-items: center;
    width: fit-content;
-   margin: 1.5vh auto 0;
+   margin: auto auto 0;
 }
 
-.Page-input {
-   margin-left: 10px;
-   margin-right: 10px;
-   width: 2.5em !important;
+.Page-text {
+   margin: 0;
+   word-spacing: 3px;
 }
 
 .Page-up-btn {
-   margin-left: 10px;
+   margin-left: 15px;
 }
 
 .Page-down-btn {
-   margin-right: 10px;
+   margin-right: 15px;
 }
 
 .User-form {
